[package]
name = "isocal"
version = "1.0.100"
authors = ["Tony Bark"]
edition = "2021"
license = "BSD-3-Clause OR UNLICENSE"
repository = "https://github.com/tonytins/isocal"
readme = "README.md"
keywords = ["finance", "week", "iso", "iso-week"]
categories = ["date-and-time"]

[badges]
maintenance = { status = "as-is" }

[dependencies]
chrono = "0.4"