[package]
name = "isocal"
version = "1.0.100"
author = "Tony Bark"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonytins/isocal"
readme = "README.md"
keywords = ["finance", "week", "iso", "iso-week"]
categories = ["date-and-time"]

[badges]
maintenance = { status = "as-is" }

[dependencies]
chrono = "0.4"
